Changes to the markdown cells

--- a/USaccidents_EDA.ipynb
+++ b/USaccidents_EDA.ipynb
@@ -630,6 +630,9 @@
     "1. City\n",
     "2. Start Time\n",
     "3. Start_Lng, Start_Lat\n",
+    "4. Source\n",
+    "5. Weather\n",
+    "6. Temperature\n",
     "\n"
    ]
   },
